# speechmark

./: README.rst  pyproject.toml
speechmark/: __init__.py  __main__.py  speechmark.py
speechmark/spiki/: renderer.py
speechmark/test/: test_speechmark.py
