# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "speechmark"
version = "0.10.0"
description = "A markup language for Speech and Dialogue."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["markup"]
authors = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "tomli >= 2.0.0; python_version < '3.11'"
]

[tool.black]
line-length = 96
target-version = ["py310"]

