# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "speechmark"
version = "0.10.1"
description = "A markup language for Speech and Dialogue."
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["markup"]
authors = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
license = "LGPL-3.0-or-later"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
]

[project.urls]

[project.scripts]
speechmark = "speechmark.main:run"

[tool.black]
line-length = 96
target-version = ["py311"]

